# cardinal-staking

./: Anchor.toml  Makefile  package.json
.github/workflows/: deps.yml  release.yml  test-soteria.yml  test.yml
programs/cardinal-group-reward-distributor/: Cargo.toml
programs/cardinal-receipt-manager/: Cargo.toml
programs/cardinal-receipt-manager/src/: lib.rs
programs/cardinal-reward-distributor/: Cargo.toml
programs/cardinal-stake-pool/: Cargo.toml
programs/cardinal-stake-pool/src/: lib.rs  state.rs
programs/cardinal-stake-pool/src/instructions/: authorize_mint.rs  claim_receipt_mint.rs  claim_stake_entry_funds.rs  double_or_reset_total_stake_seconds.rs  init_entry.rs  init_pool.rs  init_stake_mint.rs  mod.rs  reassign_stake_entry.rs  reset_stake_entry_bump.rs  return_receipt_mint.rs  stake.rs  stake_entry_fill_zeros.rs  stake_entry_resize.rs  stake_pool_fill_zeros.rs  unstake.rs  update_pool.rs  update_total_stake_seconds.rs
programs/cardinal-stake-pool/src/instructions/groups/: add_to_group_entry.rs  init_group_entry.rs  init_ungrouping.rs  mod.rs  remove_from_group_entry.rs
programs/cardinal-stake-pool/src/instructions/programmable/: mod.rs  stake_programmable.rs  unstake_custodial_programmable.rs  unstake_programmable.rs
programs/cardinal-stake-pool/src/instructions/stake_booster/: boost_stake_entry.rs
src/: api.ts  utils.ts
src/idl/: cardinal_group_reward_distributor.ts  cardinal_group_reward_distributor_idl.json  cardinal_receipt_manager.ts  cardinal_receipt_manager_idl.json  cardinal_reward_distributor.ts  cardinal_reward_distributor_idl.json  cardinal_stake_pool.ts  cardinal_stake_pool_idl.json
tests/: utils.ts  workspace.ts
tests/allowlists/: creator-allowlist-fail.test.ts  creator-allowlist.test.ts
tests/claim-stake-entry-funds/: claim-stake-entry-funds-pool-authority.test.ts
tests/cooldown/: pool-with-cooldown.test.ts
tests/double-or-reset/: double-or-reset-disallowed.test.ts  double-or-reset.test.ts
tests/fungible-staking/: fungible-staking-add-amount.test.ts  fungible-staking-add-during-cooldown.test.ts  fungible-staking.test.ts
tools/: airdropPnft.ts  cli.ts  createPool.ts  utils.ts
(+71 files in other folders)
