[package]
name = "cardinal-receipt-manager"
version = "2.2.1"
description = "Cardinal reward receipt manager"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-staking/tree/main/programs/cardinal-receipt-manager"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "reward", "receipt", "manager"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_receipt_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.10.29"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
cardinal-stake-pool = { version = "^2.2.1", path = "../cardinal-stake-pool", features = ["cpi"] }
cardinal-payment-manager = { version = "^3.0.0", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
