[package]
name = "cardinal-stake-pool"
version = "2.2.1"
description = "Cardinal stake pool"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-token-manager"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "stake", "pool"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_stake_pool"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.10.29"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.8.4", features = ["no-entrypoint"] }
cardinal-token-manager = { version = "^4.0.0", features = ["cpi"] }
cardinal-payment-manager = { version = "^3.0.0", features = ["cpi"] }
arrayref = "0.3.6"

[dev-dependencies]
proptest = { version = "1.0" }
